# pytest-repeat

./: .gitignore  .travis.yml  CHANGES.rst  README.rst  pyproject.toml  pytest_repeat.py  setup.cfg  setup.py  test_repeat.py  tox.ini
.github/: RELEASING.md
.github/workflows/: pypi-package.yml  test.yml
